2001-04-20  John Harper  <jsh@eazel.com>

	Extra i18n work. Adapted from a patch by Vlad Harchev
	<hvv@hippo.ru>

	* sawfish/wm.jl (i18n-defvar, i18n-define): new macros, expand
	to a `defvar' or `define'. Just used to mark variables that
	need special attention when extracting translatable strings

	* sawfish/wm/ext/match-window.jl: import sawfish.wm instead of
	a bunch of specific modules, so we get i18n-defvar. Then use it
	when declaring match-window-x-properties and
	match-window-properties

2001-04-17  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/beos-window-menu.jl (make-label): surround the
	name in parentheses if the window is on a different viewport as
	well as if it's on a different workspace

2001-04-12  John Harper  <jsh@eazel.com>

	* sawfish/wm/frames.jl (apply-frame-style,
	apply-frame-style-and-save): new functions. These provide a
	future-proof interface for programmatically selecting themes

2001-04-11  John Harper  <jsh@eazel.com>

	Committed some work-in-progress changes. The end goal is to
	store customized keymaps as deltas from their default value.
	That doesn't happen yet, but these changes will make it easier.

	Work to record default values of all custom options:

	* sawfish/wm/custom.jl (variable-default-value,
	variable-declared-p): new functions

	(custom-declare-variable): new keyword parameter DEFAULT-VALUE.

	(defcustom): the expansion now passes the DEFAULT-VALUE to
	custom-declare-variable

	* sawfish/wm/keymaps.jl: Rewrote all keymap initializations to
	use a single form instead of side-effecting the keymap after
	it's created. This lets the default value be known

	(custom-set-keymap): use an ugly hack to prevent the default
	value being destructively modified


	Added an extra deserialize/serialize pair when applying values
	from the UI. This is so that the customize-set function can do
	some kind of transformation at some point in the future..
	
	* sawfish/wm/custom.jl (make-custom-form): now requires an