@@ -1,5 +1,9 @@
 2001-04-20  John Harper  <jsh@eazel.com>
 
+	* sawfish/wm/state/gnome.jl (gnome-property-handler): monitor
+	_WIN_AREA as well as _WIN_WORKSPACE. This definitely
+	fundamentally flawed, but can be useful in some cases..
+
 	Extra i18n work. Adapted from a patch by Vlad Harchev
 	<hvv@hippo.ru>
 
